# PTui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  ptui.rs  traits.rs
src/modifiers/: mod.rs
src/os_impl/: mod.rs  unix.rs  windows.rs
src/tests/: mod.rs
src/tiling/: mod.rs  opts.rs  pane.rs  progressbar.rs  text.rs  tiles.rs  traits.rs
