[package]
name = "ptui"
description = "A Terminal User Interface for Rust"
authors = ["Gustavo dos Santos"]
repository = "https://github.com/Denellyne/PTui"
license = "MIT"
keywords = ["TUI"]
categories = ["command-line-utilities"]
readme = "README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
#[cfg(windows)]
winapi-util = "0.1.11"
#[cfg(windows)]
windows-sys = "0.61.2"
#[cfg(unix)]
nix = "0.31.2"
